communicating client with server, localstorage for user auth

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 VITE_APP_GOOGLE_CLIENT_ID='519632355840-d6h68rts8pj5eig980hfnikh2aucfk8l.apps.googleusercontent.com'
-VITE_APP_SERVER_URL=http://localhost:500
+VITE_APP_SERVER_URL='http://localhost:5000'
