working server with client

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
-CLIENT_URL=http://localhost:3000
+CLIENT_URL='http://localhost:3000'
 PORT=5000
 GOOGLE_CLIENT_ID=519632355840-d6h68rts8pj5eig980hfnikh2aucfk8l.apps.googleusercontent.com
+MONGO_CONNECT='mongodb+srv://testUser:test123@cluster0.5kx0s.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET=sjsajajkawjHTLdh
